--- a/static/stats-style.css
+++ b/static/stats-style.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;550;700;900&family=Raleway:wght@400;600;800;900&display=swap");
 :root {
-  --primary-color: #667AF3;
+  --primary-color: #667af3;
 }
 
 body {
   background-color: #96d8e0;
   margin: 0;
-  font-family: 'Poppins';
+  font-family: "Poppins";
 }
 
 body .title {
@@ -29,7 +29,9 @@ body .hora-fecha span {
   font-style: italic;
 }
 
-.table_scraper_results, th, td {
+.table_scraper_results,
+th,
+td {
   margin-top: 15px;
   background-color: #eef4f5;
   margin-left: 10px;
@@ -41,19 +43,33 @@ body .hora-fecha span {
   font-weight: bold;
 }
 
-.table_scraper_results .bad, th .bad, td .bad {
+.table_scraper_results a,
+th a,
+td a {
+  text-decoration: none;
+}
+
+.table_scraper_results .bad,
+th .bad,
+td .bad {
   color: red;
 }
 
-.table_scraper_results .good, th .good, td .good {
+.table_scraper_results .good,
+th .good,
+td .good {
   color: green;
 }
 
-.table_scraper_results .symbol-header, th .symbol-header, td .symbol-header {
+.table_scraper_results .symbol-header,
+th .symbol-header,
+td .symbol-header {
   width: 15px;
 }
 
-.table_scraper_results .symbol-row, th .symbol-row, td .symbol-row {
+.table_scraper_results .symbol-row,
+th .symbol-row,
+td .symbol-row {
   color: blue;
 }
 /*# sourceMappingURL=stats-style.css.map */
