--- a/static/fintech-style.css
+++ b/static/fintech-style.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;550;700;900&family=Raleway:wght@400;600;800;900&display=swap");
 :root {
-  --primary-color: #667AF3;
+  --primary-color: #667af3;
 }
 
 body {
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   width: 1024px;
   margin: 10px;
-  font-family: 'Poppins';
+  font-family: "Poppins";
 }
 
 body header {
@@ -189,19 +189,37 @@ body .datos-container .section-title {
 }
 
 body .datos-container table {
-  width: 100%;
+  text-decoration: none;
 }
 
 body .datos-container table .left-col {
+  width: 30%;
   font-weight: 600;
   text-align: right;
   padding-right: 5px;
 }
 
 body .datos-container table .right-col {
+  width: 14%;
   font-weight: 450;
   text-align: left;
   padding-left: 5px;
+}
+
+body .datos-container table .rs-col {
+  width: 14%;
+  font-weight: 450;
+  text-align: left;
+  padding-left: 5px;
+}
+
+body .datos-container table .rs-col a {
+  color: black;
+  text-decoration: none;
+}
+
+body .datos-container table .rs-col img {
+  width: 30px;
 }
 
 body .historicas .section-title {
@@ -220,7 +238,8 @@ body .historicas .tabla {
   text-align: center;
 }
 
-body .historicas .tabla th, body .historicas .tabla td {
+body .historicas .tabla th,
+body .historicas .tabla td {
   padding: 3px;
   border-bottom: 1px solid #ddd;
 }
