--- a/static/stats-style.scss
+++ b/static/stats-style.scss
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;550;700;900&family=Raleway:wght@400;600;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;550;700;900&family=Raleway:wght@400;600;800;900&display=swap");
 
 :root {
-    --primary-color: #667AF3;
+    --primary-color: #667af3;
 }
-  
+
 body {
     background-color: #96d8e0;
     margin: 0;
-    font-family: 'Poppins';
+    font-family: "Poppins";
 
     .title {
         padding-top: 25px;
@@ -30,16 +30,22 @@ body {
     }
 }
 
-.table_scraper_results, th, td {
+.table_scraper_results,
+th,
+td {
     margin-top: 15px;
     background-color: rgb(238, 244, 245);
     margin-left: 10px;
     font-size: 10px;
     border: 1px solid black;
-    border-collapse: collapse; 
+    border-collapse: collapse;
     text-align: center;
     white-space: nowrap;
     font-weight: bold;
+
+    a {
+        text-decoration: none;
+    }
 
     .bad {
         color: red;
